# glftkit

./: .gitignore  CMakeLists.txt  README.md  options.xml
include/: optionsreader.h
source/: CMakeLists.txt  main.cpp  optionsreader.cpp
tests/: CMakeLists.txt
